<resources>
    <string name="app_name">ParkMeApp</string>
    <string name="LogIn">LOGIN</string>
    <string name="SignUp">Sing Up</string>
    <string name="email_hint">name@example.com</string>
    <string name="password_hint">At least 5 characters</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username_hint">Username</string>
    <string name="save_credentials">Remember Me</string>
    <string name="newUser">Not a Member yet? SignUp now!</string>
    <string name="title_activity_park_me_app_main">Map</string>
    <string name="google_maps_key">AIzaSyChvEEyCE0VI4wdj4phb2EaD5dQKqOHfz8</string>
    <string name="access_location">We need access to your location to find a parking space for you!</string>
    <string name="ParkMeApp">ParkMeApp</string>
    <string name="invalidEmail">Please enter a valid email address</string>
    <string name="passwordInstructions">Your password must be at least 6\n characters long and contain at least 1 uppercase
        and 1 number</string>
    <string name="firstName">First Name</string>
    <string name="singUp">Sign Up</string>
    <string name="lastName">Last Name</string>
    <string name="creditCard">Credit card Number</string>
    <string name="invalidCreditCard">Invalid credit card number</string>
    <string name="invalidCVV">Invalid CVV number</string>
    <string name="invalidName"> Invalid Name </string>
    <string name="CVV">CVV</string>
    <string name="welcomeMessage">Welcome to\n ParkMeApp</string>
    <string name="emptyEmailAddress">Please enter your email address</string>
    <string name="emptyPassword">Please enter your password</string>
    <string name="authenticationFailed">Authentication failed</string>
    <string name="signUpFailed">Sign Up Failed</string>
    <string name="name">Name</string>
    <string name="Payment">Payment</string>
    <string name="History">History</string>
    <string name="Settings">Settings</string>
    <string name="Account">Account</string>
    <string name="Help">Help</string>
    <string name="SignOut">Sign Out</string>
    <string name="ParkingOwner">Parking Owner </string>
    <string name="title_activity_park_me_app"> </string>
    <string name="UserProfile">User Profile</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="SaveButton">Save</string>
    <string name="NoChanges">You didn\'t make any changes</string>
    <string name="PaymentMethods">Payment Methods</string>
    <string name="AddParking">Add Parking</string>
    <string name="StreetName">Street Name(Opt)</string>
    <string name="HouseNumber">House Number(Opt)</string>
    <string name="PostCode">Post Code(Opt)</string>
    <string name="PricePerHour">Price Per Hour(Opt)</string>
    <string name="RentMyParking">Rent My Parking</string>
    <string name="AvailableParking">Available Parking</string>
    <string name="RentParking">Rent Parking</string>
    <string name="ParkingOwnerInfo">Parking Owner Profile</string>
    <string name="Address">Address</string>
    <string name="Distance">Distance</string>
    <string name="ParkingHistory">No parking history</string>
    <string name="UserIsCurrentlyRentingParking">Leave Parking</string>
    <string name="RemoveUsersParkingFromAvailableParkingList">Remove from Available Parking</string>
    <string name="LoadingParkingCoordinates">Loading Parking coordinates\n please wait</string>
    <string name="ParkingLocation">Parking Location</string>
    <string name="EditParkingInfo">Edit Parking</string>
    <string name="CheckInternetConnection">Please check your Internet connection\n and restart the application</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>


</resources>
