<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="vd.parkmeapp.SingUpActivity">

    <!-- Sign Up -->

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singUp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:paddingTop="50dp"
        android:textSize="@dimen/large"
        android:textColor="@color/mainColor"
        android:layout_marginTop="52dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <!-- First Name -->

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:theme="@style/Theme.TextInputLayOut"
        android:layout_marginStart="20dp"
        android:layout_alignBaseline="@+id/LastName"
        android:layout_alignBottom="@+id/LastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/mainColor"/>


    <!-- Last Name -->

    <EditText
        android:id="@+id/LastName"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:layout_marginTop="50dp"
        android:inputType="textPersonName"
        android:fontFamily="sans-serif"
        android:theme="@style/Theme.TextInputLayOut"
        android:layout_below="@+id/signUpText"
        android:layout_toRightOf="@+id/FirstName"
        android:layout_toEndOf="@+id/FirstName"
        android:layout_marginLeft="40dp"
        android:textColor="@color/mainColor"/>

    <EditText
        android:id="@+id/SingUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FirstName"
        android:hint="@string/email_hint"
        android:theme="@style/Theme.TextInputLayOut"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/mainColor"/>


    <EditText
        android:id="@+id/SignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SingUpEmail"
        android:hint="@string/password"
        android:theme="@style/Theme.TextInputLayOut"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/mainColor"/>


    <EditText
        android:id="@+id/creditCard_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignUpPassword"
        android:hint="@string/creditCard"
        android:theme="@style/Theme.TextInputLayOut"
        android:fontFamily="sans-serif"
        android:inputType="number"
        android:maxLength="16"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/mainColor"/>

    <EditText
        android:id="@+id/CVV"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/creditCard_input"
        android:layout_below="@+id/SignUpPassword"
        android:hint="@string/CVV"
        android:theme="@style/Theme.TextInputLayOut"
        android:fontFamily="sans-serif"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:maxLength="3"
        android:textColor="@color/mainColor"/>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creditCard_input"
        android:text="@string/SignUp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/mainColor"/>

    <CheckBox
        android:id="@+id/SingUpCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_credentials"
        android:layout_below="@+id/SignUp"
        android:layout_marginLeft="20dp"
        android:buttonTint="@color/mainColor"
        android:checked="true"
        android:textColor="@color/mainColor"
        android:fontFamily="sans-serif"/>


















</RelativeLayout>
